Bug 419032 - [Wayland] kwin uses VR headset as monitor
Summary: [Wayland] kwin uses VR headset as monitor
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.18.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 428985 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-03-19 22:45 UTC by farmboy0
Modified: 2024-06-05 14:13 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description farmboy0 2020-03-19 22:45:17 UTC
SUMMARY
When attaching a HMD device to my graphics card kwin will use it as monitor.

STEPS TO REPRODUCE
1. Start KDE with Plasma/Wayland session
2. attach a HMD device (like Vavle index)
3. 

OBSERVED RESULT
all applications are switched to the "second monitor"

EXPECTED RESULT
kwin ignores the HMD display

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Gentoo, Kernel 5.5.6
(available in About System)
KDE Plasma Version: 5.18.3
KDE Frameworks Version: 5.68.0
Qt Version: 5.14.1

ADDITIONAL INFORMATION
Comment 1 Vlad Zahorodnii 2020-03-20 08:22:34 UTC
We ignore the "non-desktop" property set on connector objects. I assume that's the reason why HMDs are treated as monitors.
Comment 2 Zamundaaa 2020-09-09 14:07:19 UTC
It's on my list - I'll look into this once the multi GPU stuff is complete.

It will probably take a lot of effort to make VR work properly, even with a lot of the work in that direction being already done (see https://drewdevault.com/2019/08/09/DRM-leasing-and-VR-for-Wayland.html) but ignoring non-desktop displays should be rather straightforward.
Comment 3 Bug Janitor Service 2020-10-24 11:02:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/378
Comment 4 Vlad Zahorodnii 2020-10-25 19:18:11 UTC
Git commit 4462ecf6ef142f6013dda0b0229dcbefafbb13bd by Vlad Zahorodnii, on behalf of Xaver Hugl.
Committed on 25/10/2020 at 19:18.
Pushed by vladz into branch 'master'.

Detect some DrmConnector properties and ignore non-desktop displays

M  +4    -0    plugins/platforms/drm/drm_gpu.cpp
M  +3    -2    plugins/platforms/drm/drm_object.cpp
M  +4    -0    plugins/platforms/drm/drm_object.h
M  +1    -0    plugins/platforms/drm/drm_object_connector.cpp
M  +5    -2    plugins/platforms/drm/drm_object_connector.h

https://invent.kde.org/plasma/kwin/commit/4462ecf6ef142f6013dda0b0229dcbefafbb13bd
Comment 5 Nate Graham 2020-11-11 21:13:20 UTC
*** Bug 428985 has been marked as a duplicate of this bug. ***
Comment 6 Chris 2021-02-12 23:05:52 UTC
Is this in 5.21, or would it end up in 5.22 instead?
Comment 7 Zamundaaa 2021-02-12 23:29:44 UTC
It's in 5.21