Detect some DrmConnector properties and ignore non-desktop displays

BUG: 419032